2004-04-19  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/devel/participating/index.html (procedure): Add CVS
	checkout procedure for sources.  Remove deprecated login option.

2004-04-14  Jan Nieuwenhuizen  <janneke@gnu.org>

	* GNUmakefile (TAGS): New target.

	*.html: Update some stale DOC@ (esp. v1.8) links.

2004-04-06  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/images/netbsd.jpg: 
	* site/download/index.html: Add NetBSD pkgsrc reference.

2004-03-24  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* site/about/automated-engraving/schubert.html: add Schubert
	morgenlied example with images.

2004-03-23  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* site/switch/howto.html: update images for v2.1

2004-03-15  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* site/index.html: site/images/monet-fragment.jpg: smaller.

	* site/about/pubs.html (href): add interview and /. story.
	
	* site/switch/tour.html: typo

2004-03-14  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/download/index.html: Add local Debian logos.  Linux ->
	GNU/Linux for distribution.

	* format-page.py (do_one_file): Handle @DOC@, change all HTML sources.

2004-03-14  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* site/download/index.html: add gentoo link.

2004-03-13  Jan Nieuwenhuizen  <janneke@gnu.org>

	* README: Add note about absolute document links.

	* site/documentation.html: 
	* site/about/index.html: Make documentation links site-absolute: /doc.

	* site/old-news.html: Remove stray modal editor traces and run
	indent-region.

	* site/devel/participating/localization.html:
	* site/devel/misc/etfformat.html: Remove stale wiki links.  Note:
	devel/misc is not linked!

	* site/about/index.html: Add note about current mailing list
	restrictions.  Fix absolute urls.  Tidy, run indent-region.

	* site/devel/participating/index.html: Fix anon CVS location.

	* site/documentation.html: Replace absolute urls with relative
	ones.  This fixes a local or mirror site.

2004-03-01  Han-Wen Nienhuys   <hanwen@xs4all.nl>
