@@ -137,9 +137,16 @@
 
 <br>
 
+<!-- This should be inside HEAD, but we'd have to hack the
+     silly format-page.py script especially to support that.
+     Indentation by Emacs is foobar.  !-->
 <script>
-  <!-- function setfocus () { document.f_lily_google.brute_query.focus
-       (); } // -->
+  <!--
+      function setfocus ()
+      {
+      document.f_lily_google.brute_query.focus ();
+      }
+      // !-->
 </script>
 
 <p align="center">
